force-app/main/default/objects/Slack_Button_Clicked__e/Slack_Button_Clicked__e.object-meta.xml
<CustomObject>
    <description>A platform event that will publish the action id, value &amp; response url of a button clicked in Slack.</description>
    <label>Slack Button Clicked</label>
    <pluralLabel>Slack Buttons Clicked</pluralLabel>
</CustomObject>