force-app/main/default/objects/Slack_Button_Clicked__e/fields/Channel_ID__c.field-meta.xml
<CustomField>
    <fullName>Channel_ID__c</fullName>
    <label>Channel ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>