force-app/main/default/objects/Slack_Button_Clicked__e/fields/Response_URL__c.field-meta.xml
<CustomField>
    <fullName>Response_URL__c</fullName>
    <label>Response URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>