force-app/main/default/objects/Slack_Button_Clicked__e/fields/Thread_ID__c.field-meta.xml
<CustomField>
    <fullName>Thread_ID__c</fullName>
    <label>Thread ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>