force-app/main/default/objects/Slack_Button_Clicked__e/fields/Trigger_ID__c.field-meta.xml
<CustomField>
    <fullName>Trigger_ID__c</fullName>
    <label>Trigger ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>